[gd_scene load_steps=6 format=2]

[ext_resource path="res://Modules/Health.tscn" type="PackedScene" id=1]
[ext_resource path="res://Modules/Navigation.tscn" type="PackedScene" id=2]
[ext_resource path="res://Modules/Player_Tracker.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Sniper.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 19.0

[node name="Sniper" type="KinematicBody2D"]
light_mask = 2
collision_layer = 0
collision_mask = 3
script = ExtResource( 4 )

[node name="Health" parent="." instance=ExtResource( 1 )]

[node name="Navigation" parent="." instance=ExtResource( 2 )]
radius = 20.0

[node name="Player_Tracker" parent="." instance=ExtResource( 3 )]

[node name="Laser_Sight" type="Line2D" parent="."]
light_mask = 2
z_index = 1
points = PoolVector2Array( 0, 0, 99, 25 )
default_color = Color( 0.933333, 0, 0, 0.47451 )
end_cap_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
light_mask = 2
z_index = 1
color = Color( 0.3157, 0.77, 0.732142, 1 )
offset = Vector2( 4.09091, 0 )
polygon = PoolVector2Array( -11, -22, -30, 0, -11, 22, 59, 0 )

[node name="Laser_Raycast" type="RayCast2D" parent="Polygon2D"]
cast_to = Vector2( 1500, 0 )
collision_mask = 2

[node name="Tween" type="Tween" parent="."]

[node name="Charge_Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="Charge_Timer" to="." method="_on_Charge_Timer_timeout"]
